information update and aligning issues fixed

--- a/css/custom.css
+++ b/css/custom.css
@@ -13,7 +13,7 @@ img.background {
 }
 
 #main {
-  width: 50%;
+  width: 60%;
   margin-right: auto;
   margin-left: auto;
 }
@@ -58,7 +58,8 @@ img.background {
 }
 
 h2 {
-  font-weight: lighter;
+  font-weight: 300;
+  font-size: 22px;
 }
 
 #logo {
@@ -82,6 +83,7 @@ h2 {
 }
 
 .hero-unit {
+  text-align: center;
   background-color: rgba(238, 238, 238, 0.75);
   padding: 20px 40px 10px 40px;
   border-radius: 6px 6px 0 0;
@@ -90,11 +92,11 @@ h2 {
 
 .hero-unit h1 {
   font-family: 'Open Sans', sans-serif;
-  font-weight: 300;
+  font-weight: 400;
   line-height: 150%;
   display: inline-block;
   width: 100%;
-  padding: 0 0 20px 0;
+  padding: 0 0 10px 0;
 } 
 
 .tabs {
@@ -151,24 +153,41 @@ h2 {
   border-radius: 0 0 6px 6px;
 }
 
+.tab-content a {
+  text-decoration: none;
+  color: rgb(51, 51, 51);
+}
+
+.tab-content a:hover {
+  text-decoration: none;
+  color: rgb(151, 151, 151);
+}
+
 .tab-pane {
   padding: 20px 40px 20px 40px;
+  font-size: 14px;
+}
+
+.tab-pane a {
+  font-weight: 400;
 }
 
 #description {
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
+  font-size: 16px;
   width: 100%;
+  line-height: 150%;
   padding: 0 0 20px 0;
 }
 
 #footer {
   background: url(../images/flier.png);
   background-color: #099377;
-  padding: 20px 0 20px 0;
+  padding: 10px 0 10px 0;
   text-align: center;
   font-family: 'Open Sans', sans-serif;
-  font-weight: 400;
+  font-weight: 300;
 }
 
 .footer-ul {
